
        CHANGES IN spatstat.explore VERSION 3.2-1.006

OVERVIEW

    o Minor improvements.

    o Workaround for bug in dev.capabilities()
    
SIGNIFICANT USER-VISIBLE CHANGES

    o circdensity
    Improved output of 'print' method
    
    o plot.bermantest
    Improved layout for plots of Berman's Z2 test.

    o plot.fv
    New argument 'clip.xlim'.
    
BUG FIXES

    o plot.fv
    A hard crash (segmentation fault) could occur
    due to a bug in grDevices::dev.capabilities().
    Fixed.
    
        CHANGES IN spatstat.explore VERSION 3.2-1

OVERVIEW

    o Internal bug fixes.


        CHANGES IN spatstat.explore VERSION 3.2-0

OVERVIEW

    o We thank Jonatan Gonzalez for contributions.
    
    o Changed the calculation of standard errors in density.ppp and relrisk.ppp.

    o Inline arithmetic for function tables ('fv') and arrays ('fasp')

    o Standard error calculation for Smooth.ppp (experimental)
    
    o multitype pair correlation functions can save numerator and denominator.

    o multitype inhomogeneous J functions.

    o More support for automatic bandwidth selection.
    
    o Bug fixes in calculation of standard errors.

NEW FUNCTIONS

    o Math.fv, Complex.fv, Summary.fv, Ops.fv
    Methods for arithmetic operations for function tables (class 'fv')
    
    o Math.fasp, Complex.fasp, Summary.fasp, Ops.fasp
    Methods for arithmetic operations for function arrays (class 'fasp')

    o Gcross.inhom, Gdot.inhom
    Multitype G functions for inhomogeneous point processes.
    
    o Jcross.inhom, Jdot.inhom, Jmulti.inhom
    Multitype J functions for inhomogeneous point processes.

    o summary.bw.optim, print.summary.bw.optim
    Method for 'summary' of optimised bandwidth objects (class 'bw.optim').
    These are the objects produced by the bandwidth selection functions
    such as bw.diggle, bw.scott, bw.pcf
    
SIGNIFICANT USER-VISIBLE CHANGES

    o density.ppp