@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.2-1.006
-Date: 2023-07-17
+Version: 3.2-1.007
+Date: 2023-08-14
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
