@@ -5,4 +5,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2023-03-14" "3.1-0" 227 508 0 30724 6295
 "2023-05-10" "3.2-0" 234 523 0 31541 6365
 "2023-05-13" "3.2-1" 234 523 0 31561 6365
-"2023-07-17" "3.2-1.006" 234 523 0 31580 6365
+"2023-08-14" "3.2-1.007" 234 523 0 31581 6365
